--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- GARCIA FIGUEROA BRYGNEY CAMILA
+     HUARCAYA VARGAS FRANK LUIS
+     VALLE ALFARO GEOVANNI DAYAN
+     YUCRA VILLACORTA JOEL DANIEL-->
 <!DOCTYPE html>
 <html lang="es">
 <head>
